--- a/WinterGame/Packages/manifest.json
+++ b/WinterGame/Packages/manifest.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "7.0.3",
+    "com.unity.2d.spriteshape": "5.3.0",
     "com.unity.collab-proxy": "1.15.12",
     "com.unity.ide.rider": "3.0.9",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.4",
-    "com.unity.terrain-tools": "4.0.3",
+    "com.unity.terrain-tools": "3.0.2-preview.3",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.3",
